@@ -20,8 +20,12 @@
 
 <ul>
  <li> New functions: <tt>ipc_timed_sendv()</tt>, <tt>unlink_void()</tt> </li>
- <li> The <a href="djbunix.html">dir_close()</a> function now returns void
+ <li> The <a href="libstddjb/djbunix.html">dir_close()</a> function now returns void
 and leaves errno unchanged. </li>
+ <li> The <tt>absolutepath()</tt> and <tt>sarealpath_tmp()</tt> functions, as well
+as the <tt>skalibs/mininetstring.h</tt> family of functions, have been removed. </li>
+ <li> <a href="libstddjb/djbunix.html">skalibs/djbunix.h</a> does not include
+<tt>skalibs/env.h</tt> anymore. </li>
 </ul>
 
 <h2> in 2.6.4.0 </h2>
